# test

./: CMakeLists.txt  menu_principale.py  outputserveur.txt
Sockets/: Client  Client.c  Server  Server.c  Server_Client.h
Tubes_Nomees/: Client  Client.c  Handlers_Cli.h  Handlers_Serv.h  Makefile  Server  Server.c  serv_cli_fifo.h
